--- a/css/myresume.css
+++ b/css/myresume.css
@@ -7,5 +7,5 @@ h1, h2, h3, h4, h5, h6, .h1,.h2,.h3,.h4,.h5,.h6{
 .subheading{
 	font-family:'Noto Sans TC',sans-serif;
 }
-h1{font-size: 12px:
+h1{font-size: 0.5rem;
 }
