--- a/css/myresume.css
+++ b/css/myresume.css
@@ -7,6 +7,9 @@ h1, h2, h3, h4, h5, h6, .h1,.h2,.h3,.h4,.h5,.h6{
 .subheading{
 	font-family:'Noto Sans TC',sans-serif;
 }
-h1{
-	font-size: 0.5rem;
+.subheading {
+    font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 0.5rem;
 }
