--- a/css/myresume.css
+++ b/css/myresume.css
@@ -13,7 +13,7 @@ h1, h2, h3, h4, h5, h6, .h1,.h2,.h3,.h4,.h5,.h6{
     font-weight: 500;
     font-size: 1.2rem;
 }
-div.subheading {
+div.subheading.mb-5 {
     font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     text-transform: uppercase;
     font-weight: 500;
