--- a/css/myresume.css
+++ b/css/myresume.css
@@ -1,21 +1,18 @@
 body{
 	font-family:'Noto sans TC' sans-serif;
 }
+
 h1, h2, h3, h4, h5, h6, .h1,.h2,.h3,.h4,.h5,.h6{
 	font-family:'Noto Sans TC', sans serif;
 }
-.subheading{
-	font-family:'Noto Sans TC',sans-serif;
-}
 .subheading {
-    font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    text-transform: uppercase;
-    font-weight: 500;
-    font-size: 1.2rem;
+    font-family: 'Noto Sans TC', sans-serif;
+    font-weight: 1.2rem;
+    font-size: normal;
 }
-div.subheading.mb-5 {
-    font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    text-transform: uppercase;
-    font-weight: 500;
-    font-size: 50px;
+h1, h2, h3, h4, h5, h6, .subheading{
+	text-size:5rem;
+}
+p.lead{
+	font-size:1.2rem;
 }
