--- a/css/myresume.css
+++ b/css/myresume.css
@@ -16,4 +16,10 @@ h1, h2, h3, h4, h5, h6, .subheading{
 p.lead{
 	font-size:1.2rem;
 }
-
+.bg-primary{
+	background-color: #004d37!important;
+	background-image:url(../assets/img/diagmonds.png);
+}
+.text-primary{
+	color: #004d37!important;
+}
