--- a/css/myresume.css
+++ b/css/myresume.css
@@ -8,7 +8,7 @@ h1, h2, h3, h4, h5, h6, .h1,.h2,.h3,.h4,.h5,.h6{
 .subheading {
     font-family: 'Noto Sans TC', sans-serif;
     font-weight: 1.2rem;
-    font-size: normal;
+    font-size: 1rem;
 }
 h1, h2, h3, h4, h5, h6, .subheading{
 	text-size:5rem;
